# customer-reports-RiskApp

./: .env.example  .env.local.example  .gitignore  .npmrc  .prettierrc  FRONTEND_README.md  README.md  docker-compose.yml  eslint.config.js  index.html  logrocket.ts  package-lock.json  package.json  vite.config.ts
backend/: Dockerfile  requirements.txt
backend/config/: settings.py  urls.py
backend/reports/: middleware.py  models.py  pdf.py  tests.py  views.py
backend/reports/migrations/: 0001_initial.py
libs/riskapp_reports_client/: pyproject.toml
libs/riskapp_reports_client/riskapp_reports_client/: __init__.py  client.py  exceptions.py  types.py
libs/riskapp_reports_client/riskapp_reports_client.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
report_microservice/: Dockerfile  manage.py  requirements.txt
report_microservice/config/: asgi.py  settings.py  urls.py
report_microservice/worker/: consumers.py  crypto.py  tasks.py  views.py
scripts/: generate-redirects.js
src/: App.tsx  index.css  router.tsx  utils.ts
src/components/common/: DeleteAction.tsx  ProtectedRoutes.tsx  commonStyling.ts
src/components/layouts/: AppLayout.tsx  LoginLayout.tsx
src/components/login/: LoginCard.tsx  LoginForm.tsx  RegisterCard.tsx  RegisterForm.tsx
src/hooks/: useReportsSocket.ts
src/pages/: EntityDetailPage.tsx  ErrorPage.tsx  GenerateReportPage.tsx  Home.tsx  LoginPage.tsx  ProfilePage.tsx  RegisterPage.tsx  SessionExpiredPage.tsx
src/services/: api.ts  auth.ts  common.ts  reports.ts
src/store/: authSlice.ts  hooks.ts  store.ts
(+13 files in other folders)
