[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "riskapp-reports-client"
version = "0.1.0"
description = "Python client for the RiskApp report microservice"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32,<3",
]

[tool.setuptools.packages.find]
where = ["."]
